force-app/main/default/objects/Portfolio_Item__c/Portfolio_Item__c.object-meta.xml
<CustomObject>
    <label>Portfolio Item</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>