force-app/main/default/objects/Portfolio_Item__c/fields/Date_Label__c.field-meta.xml
<CustomField>
    <fullName>Date_Label__c</fullName>
    <label>Date Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>