force-app/main/default/objects/Portfolio_Item__c/fields/Link_Label__c.field-meta.xml
<CustomField>
    <fullName>Link_Label__c</fullName>
    <label>Link Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>