force-app/main/default/objects/Portfolio_Item__c/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <label>Section Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>