force-app/main/default/objects/Portfolio_Item__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <label>Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>