force-app/main/default/objects/Portfolio_Item__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags (semicolon-separated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>